# portfolio-analytics

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  MIGRATION.md  config.py  exceptions.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/services/: analytics.py  embeddings.py  market_data.py  nvidia_llm.py  optimizer.py  qdrant_client.py
backend/tests/: conftest.py  test_api.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/optimize/: route.ts
frontend/app/api/semantic-search/: route.ts
frontend/app/discover/: page.tsx
frontend/components/: AuthButton.tsx  DiscoverPage.tsx  DiscoverPromo.tsx  LegalFooter.tsx  MetricCard.tsx  OptimizeSection.tsx  PortfolioManager.tsx  ResultDisclaimer.tsx  TickerInput.tsx
frontend/lib/: companies.ts  copy.ts  firebase.ts  lang.tsx  optimizations.ts  portfolios.ts  semanticSearch.ts  useAuth.ts
