[tool.poetry]
name = "portfolio-analytics-backend"
version = "2.0.0"
description = "Portfolio analytics API with semantic search and AI-powered recommendations"
authors = ["Moad Maroufi <moad@example.com>"]
readme = "README.md"
packages = [{include = "*.py"}, {include = "services/*.py"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"
torch = {version = "2.4.0+cpu", source = "pytorch-cpu"}
transformers = "^4.41.2"
sentence-transformers = "^2.7.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
scikit-learn = "^1.4.2"
yfinance = "^0.2.50"
openai = "^1.52.0"
qdrant-client = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.9"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "main:app"